@@ -6,6 +6,36 @@
 mvn clean javafx:run
 
 ```
+```xml
+<build>
+        <plugins>
+            <!-- JavaFX Maven Plugin -->
+            <plugin>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>0.0.8</version>
+                <executions>
+                    <execution>
+                        <id>create-jlink</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>jlink</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <mainClass>kun.FileShareClient</mainClass>
+                    <options>
+                        <option>--module-path</option>
+                        <option>${javafx.path}</option>
+                        <option>--add-modules</option>
+                        <option>javafx.controls,javafx.fxml,kun,jakarta.ws.rs</option>
+                    </options>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+```
 
 ```xml
 <!-- Java compiler version -->
